<resources>
    <string name="app_name">FoodBattle</string>

    <!-- Strings related to login -->
    <string name="welcome">歡迎回來</string>
    <string name="account">帳號</string>
    <string name="prompt_email">Email</string>
    <string name="password">密碼</string>
    <string name="check_password1">確認密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="remember">記得我的帳號密碼</string>
    <string name="register">註冊新帳號</string>
    <string name="email">Email認證</string>
    <string name="sucess">恭喜驗證成功！</string>
    <string name="sucess_title">驗證成功</string>
    <string name="next">下一步</string>
    <string name="fail">很可惜！驗證失敗</string>
    <string name="fail_title">驗證失敗</string>
    <string name="resend">重新寄出驗證碼</string>
    <string name="rewrite">重新輸入驗證碼</string>
    <string name="input_number">輸入信箱收到的驗證碼</string>
    <string name="ok">確認</string>
    <string name="try_another">換個Eamil試試看</string>
    <string name="login_direct">已經有帳號了？登入</string>
    <string name="signup">立即註冊</string>
    <string name="check">檢查帳號</string>
    <string name="send">寄出驗證碼</string>
    <string name="setting">設定個人資料</string>
    <string name="name">暱稱</string>
    <string name="style">料理風格</string>
    <string name="dish">拿手菜</string>
    <string name="introduce">自我介紹</string>
    <string name="skip">跳過</string>
    <string name="index">推薦菜單</string>
    <string name="recommend">本日推薦</string>
    <string name="chinese">中式料理</string>
    <string name="intalian">義式料理</string>
    <string name="japan">日式料理</string>
    <string name="america">美式料理</string>
    <string name="desert">甜點</string>
    <string name="space">個人空間</string>
    <string name="market">團購市集</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">你在想什麼？</string>
    <string name="title_activity_navigation">Navigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
