<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context="com.example.jam68ty.foodbattle.SignUp"
    android:weightSum="1">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.08"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">



                <EditText
                    android:id="@+id/editText16"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/rounded_editext2"
                    android:ems="10"
                    android:hint="@string/account"
                    android:inputType="textPersonName"
                    android:padding="7dp"
                    android:layout_marginRight="10dp"
                    />




            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:background="@drawable/rounded_button2"
                android:padding="6dp"
                android:text="@string/check"
                android:textColor="@color/white"/>


        </TableRow>

        <TableRow
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/editText26"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_editext2"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="7dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/editText27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/rounded_editext2"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="7dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/editText28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/rounded_editext2"
                android:ems="10"
                android:hint="@string/check_password1"
                android:inputType="textPassword"
                android:padding="7dp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/login_direct"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center"
        />

</LinearLayout>
