<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@drawable/loginback"
            tools:context="com.example.jam68ty.foodbattle.LoginActivity"
            android:weightSum="1">
            <!-- Login progress -->

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription=""
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25dp"
                android:text="@string/welcome"
                tools:ignore="SpUsage" />

            <ImageView
                android:id="@+id/line0"
                android:background="@color/darkGray"
                android:layout_height="1dp"
                android:layout_width="300dp"
                app:srcCompat="@color/darkGray"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf">

            </LinearLayout>

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="217dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="215dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/account"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="horizontal"></LinearLayout>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="215dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:orientation="horizontal"></LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remember"
                        android:textColor="@color/darkGray" />

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="135dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:orientation="horizontal"></LinearLayout>

            <ImageView
                android:id="@+id/line"
                android:background="@color/darkGray"
                android:layout_height="1dp"
                android:layout_width="300dp"
                app:srcCompat="@color/darkGray"
                tools:ignore="ContentDescription" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_weight="0.09">

                <TableRow
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/facebook"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"></LinearLayout>

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/google"
                        tools:ignore="ContentDescription" />
                </TableRow>


            </TableLayout>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.26"
                android:textSize="20sp"
                android:textColor="@color/darkGray"
                android:inputType="textPersonName"
                android:text="@string/register"
                android:gravity="center"
                tools:ignore="TextViewEdits" />

        </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
